--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -30,6 +30,7 @@
 [dependencies]
     dendros={workspace=true}
     riced={workspace=true}
+    thiserror={workspace=true}
     treeview={workspace=true}
     # tracing-subscriber={workspace=true}
 
@@ -55,9 +56,9 @@
     winreg={workspace=true}
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
-    winres="0.1"
-    image="0.25"
     ico="0.4"
+    image="0.25"
+    winres="0.1"
 
 [lints]
     workspace=true
