--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@
         readme="README.md"
         repository="https://github.com/karolisr/treehouse"
         rust-version="1.88"
-        version="0.22.0"
+        version="0.23.0"
 
     [workspace.dependencies] # -------------------------------------------------
         num-traits="0.2.19"
@@ -113,6 +113,10 @@
 
     [workspace.lints.rustdoc] # ------------------------------------------------
         broken_intra_doc_links="forbid"
+
+[patch.crates-io]
+    iced_core={git="https://github.com/karolisr/iced.git", branch="custom"}
+    iced_widget={git="https://github.com/karolisr/iced.git", branch="custom"}
 
 [profile.dev] # ----------------------------------------------------------------
     codegen-units=6       # 256
