Custom menu UI done.

--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -29,8 +29,8 @@
 
 [features]
     default=[
-        "menu-custom",
-        # "menu-muda"
+        # "menu-custom",
+        "menu-muda"
     ]
     menu-custom=["dep:iced_aw", "dep:iced_fonts"]
     menu-muda=["dep:muda"]
