--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@
         readme="README.md"
         repository="https://github.com/karolisr/treehouse"
         rust-version="1.88"
-        version="0.28.1"
+        version="0.29.0"
 
     [workspace.dependencies] # -------------------------------------------------
         convert_case="0.8.0"
@@ -50,12 +50,6 @@
             default-features=false
             features=[]
             git="https://github.com/karolisr/dendros.git"
-
-        [workspace.dependencies.muda]
-            branch="custom"
-            default-features=false
-            features=[]
-            git="https://github.com/karolisr/muda.git"
 
         [workspace.dependencies.rfd]
             default-features=false
@@ -134,8 +128,8 @@
     rpath=false           # false
     strip=false           # false
 
-    [profile.dev.package.objc2]
-        debug-assertions=false
+    # [profile.dev.package.objc2]
+    #     debug-assertions=false
 
 [profile.release] # ------------------------------------------------------------
     codegen-units=1        # 16
