--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,10 +23,11 @@
         readme="README.md"
         repository="https://github.com/karolisr/treehouse"
         rust-version="1.88"
-        version="0.30.0"
+        version="0.31.0"
 
     [workspace.dependencies] # -------------------------------------------------
-        convert_case="0.8.0"
+        confy="2.0.0"
+        convert_case="0.11.0"
         csv="1.4.0"
         num-traits="0.2.19"
         numfmt="1.2.0"
@@ -54,7 +55,7 @@
         [workspace.dependencies.rfd]
             default-features=false
             features=[]
-            version="0.16.0"
+            version="0.17.2"
 
         [workspace.dependencies.oxidize-pdf]
             default-features=false
